p2/k8s/app/common/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: replace-path
  namespace: iot
spec:
  replacePathRegex:
    regex: "^/$"
    replacement: "/app3/"
