p2/k8s/app/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: global-default-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-replace-path@kubernetescrd
  namespace: iot
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: app1-service
            port:
              number: 80
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: app2-service
            port:
              number: 80
      - path: /app3
        pathType: Prefix
        backend:
          service:
            name: app3-service
            port:
              number: 80
      - path: /
        pathType: Exact
        backend:
          service:
            name: app3-service
            port:
              number: 80
